--- a/QueryConstructor/QueryConstructor.csproj
+++ b/QueryConstructor/QueryConstructor.csproj
@@ -66,10 +66,10 @@
     <Compile Include="Forms\QueryConsole.Designer.cs">
       <DependentUpon>QueryConsole.cs</DependentUpon>
     </Compile>
-    <Compile Include="QueryString.cs">
+    <Compile Include="Forms\QueryString.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="QueryString.Designer.cs">
+    <Compile Include="Forms\QueryString.Designer.cs">
       <DependentUpon>QueryString.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Forms\Authentication.resx">
@@ -87,7 +87,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="QueryString.resx">
+    <EmbeddedResource Include="Forms\QueryString.resx">
       <DependentUpon>QueryString.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
